# telegram-business-bot-template

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/samples/: sample_bot_delivery_report.typ
src/telegram_business_bot/: __init__.py  bot.py  faq.py  leads.py  settings.py
tests/: test_faq.py  test_leads.py  test_settings.py
