[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-business-bot-template"
version = "0.1.0"
description = "Telegram bot template for lead capture, FAQs, alerts, and small-business automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emir Huseyin Inci" }]
dependencies = [
    "aiogram>=3.13",
    "email-validator>=2.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
business-bot = "telegram_business_bot.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=telegram_business_bot --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.coverage.run]
omit = [
    "src/telegram_business_bot/bot.py",
]
